chore: add root variable of nav-desktop-height for fixed-head spacing
ppt 0203 p.9

--- a/src/assets/scss/abstracts/_variables.scss
+++ b/src/assets/scss/abstracts/_variables.scss
@@ -4,4 +4,8 @@ $darkGreen: #007c7d;
 $grey: #d1d1d1;
 $lightGreen: #30a701;
 $red: #c44141;
-$grey: #d1d1d1
+$grey: #d1d1d1;
+
+:root {
+  --nav-desktop-height: 75px;
+}
